--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/react": "^18.3.3",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "postcss-cli": "^11.0.0",
+    "react": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.7",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.4"
   }
 }
