--- a/package.json
+++ b/package.json
@@ -38,12 +38,17 @@
     "react": "^18.3.1",
     "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.2.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
