--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@roysupriyo10/figr-ui",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A simple component library extending basic components from ShadCN UI",
   "scripts": {
     "rollup": "rollup -c",
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
@@ -56,7 +57,6 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/roysupriyo10"
   }
