--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@roysupriyo10/figr-ui",
-  "version": "0.0.4",
+  "version": "0.0.10",
   "description": "A simple component library extending basic components from ShadCN UI",
   "scripts": {
-    "rollup": "rollup -c",
+    "build": "rimraf dist && rollup -c --silent && postcss src/index.css -o dist/index.css",
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -11,6 +12,10 @@
   "author": "Supriyo Roy",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@chromatic-com/storybook": "^1.6.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -28,15 +33,22 @@
     "@storybook/react": "^8.2.6",
     "@storybook/react-vite": "^8.2.6",
     "@storybook/test": "^8.2.6",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
+    "babel-jest": "^29.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
+    "react-test-renderer": "^18.3.1",
+    "rimraf": "^6.0.1",
     "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
