--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rimraf dist && rollup -c --silent && postcss src/index.css -o dist/index.css",
     "test": "jest",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev",
     "build-storybook": "storybook build"
   },
   "keywords": [],
