--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@roysupriyo10/figr-ui",
-  "version": "0.0.28",
+  "name": "roysupriyo10-figr-ui",
+  "version": "0.0.29",
   "description": "A simple component library extending basic components from ShadCN UI",
   "scripts": {
     "build": "rimraf dist && rollup -c --silent && postcss src/index.css -o dist/index.css",
@@ -63,13 +63,13 @@
   "peerDependencies": {
     "react": "^18.3.1"
   },
+  "repository": {
+    "url": "git+https://github.com/roysupriyo10/figr-ui.git"
+  },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/roysupriyo10"
-  }
+  "types": "dist/index.d.ts"
 }
